--- a/PZ2/p4.md
+++ b/PZ2/p4.md
@@ -3,6 +3,48 @@
 ## Hiter razvoj
 
 ### Agilni
-Sistem se razvija kot zaporedje različic v sodelovanju z naročnikom, ki je vključen v specifikacijo in vrednotenje posameznih  različic. Minimalno okumetacije, saj se osredotoča na delujočo izvorni kodo.
+- sistem se razvija kot zaporedje različic v sodelovanju z naročnikom, ki je vključen v specifikacijo in vrednotenje posameznih  različic. 
+- minimalno okumetacije, saj se osredotoča na delujočo izvorni kodo
+- majhen ali srednje velik izdelek
 
 ## Agilne metode
+- osredotočene na kodo in ne na načrt
+- iterativen pristop
+- hitro zagotavljanje delujoče programske opreme
+
+### Principi
+- sodelovanje stranke
+- postopna dostava
+- ljudje in ne procesi -> izkoriščanje spretnosti
+- sprejemanje sprememb
+- ohranjanje enostavnosti
+
+## Tehnike 
+
+### Ekstremno prog. XP
+- nove različice se lahko izdelajo večkrat na dan
+- inkramenti se dostavijo strankam vsake dva tedna
+- za vsako izgradnjo se izvede vse teste
+
+### Scrum 
+- upravljanje iterativnega razoja programske opreme
+- sestavljen iz treh faz:
+    - začetna (načrtovanje)
+    - vrsta ciklov sprinta 
+    - zaključek projekta
+
+#### Prednosti
+- množica obvladljivih in razumljivih delov
+- nestabilne zahteve ne zadržujejo napredka
+- celotna ekipa ima pregled nad vsem
+- pravočasna dostava
+- zaupanje med naročnikom in razvijalci
+- izboljšana komunikacija
+
+### Težave
+- neformalnost
+- niso namenjene vzdrževanju prog. opreme
+- pomankanje dokumentacije
+- vključenost naročnika
+- ohranjanje kontinuitete
+
