--- a/PZ2/p4.md
+++ b/PZ2/p4.md
@@ -48,3 +48,13 @@
 - vključenost naročnika
 - ohranjanje kontinuitete
 
+## Prilagajanje agilnih metod
+- **prilagajanje navzgor** -> uporaba agilnih metod za razvoj večjih sistemov
+- **prilagajanje navzven** -> uvedba v veliko organizacijo z dolgoletnimi iskupnjami
+
+### Agilno vzdrževanje
+- pomankanje dokumentacije
+- vključenost naročnika v razvojnem procesu
+- ohranjanje kontinuitete razvojne skupine
+
+
