--- a/PZ2/p5.md
+++ b/PZ2/p5.md
@@ -1,4 +1,38 @@
 # P5 Zajem zahtev
+- osnova za ponudbo -> odprte za različne iterpretacije
+- osnova za pogodbo -> natančna opredelitev
+
 **Uporabniške zahteve** -> vodje naročnika, končni uporabniki, inženirji naročnika
 
 **Sistemske zahteve** -> končni uporabniki, inženerji naročnika, sistemski arhitekti, razvijalci programa
+
+**Deležnik** je posameznik ali organizacija, ki je vključen v projekt ali pa bo izvedba projekta kakorkoli vplivala na njegove koristi
+
+**Funkcionalne zahteve** -> podrobnosti storitev, način odziva sistema na vhodne podatke, kaj sistem počne
+
+## Nefunkcionalne zahteve
+Omejitve storitev, lastnosti sistema
+
+### Klasifikacija
+- zahteve izdelka
+- organizacijske zahteve
+- zunanje zahteve
+
+## Procesi zajema zahtev
+
+### Pridobivanje zahtev
+- odkrivajne zahtev
+- razvrstitecv in organizacija
+- določanje prioritet in pogajanje
+- specifikacija
+
+### Spceifikacija zahtev
+### Vrednostenje zahtev
+
+#### Preverjanje zahtev
+- veljavnost
+- skladnost
+- celovitost
+- realističnost
+- preverljivost
+### Upravljanje zahtev
