--- a/PZ2/p4.md
+++ b/PZ2/p4.md
@@ -7,11 +7,6 @@
 - minimalno okumetacije, saj se osredotoča na delujočo izvorni kodo
 - majhen ali srednje velik izdelek
 
-## Agilne metode
-- osredotočene na kodo in ne na načrt
-- iterativen pristop
-- hitro zagotavljanje delujoče programske opreme
-
 ### Principi
 - sodelovanje stranke
 - postopna dostava
@@ -50,11 +45,6 @@
 
 ## Prilagajanje agilnih metod
 - **prilagajanje navzgor** -> uporaba agilnih metod za razvoj večjih sistemov
-- **prilagajanje navzven** -> uvedba v veliko organizacijo z dolgoletnimi iskupnjami
-
-### Agilno vzdrževanje
-- pomankanje dokumentacije
-- vključenost naročnika v razvojnem procesu
-- ohranjanje kontinuitete razvojne skupine
+- **prilagajanje navzven** -> uvedba v veliko organizacijo z dolgoletnimi iskušnjami
 
 
