--- a/PZ2/p5.md
+++ b/PZ2/p5.md
@@ -22,7 +22,7 @@ Omejitve storitev, lastnosti sistema
 
 ### Pridobivanje zahtev
 - odkrivajne zahtev
-- razvrstitecv in organizacija
+- razvrstitev in organizacija
 - določanje prioritet in pogajanje
 - specifikacija
 
