new layout and PSP

--- a/TPO/PZ3/p6.md
+++ b/TPO/PZ3/p6.md
@@ -10,11 +10,11 @@ Načrt novega sistema:
 ### Vidiki sistema:
 - zunanji vidik (okolje sistema)
 - vidik sodelovanja (iterakcija sistem - okolje)
-- strukturn i vidik (struktora obdelovanih podatkov)
+- strukturni vidik (struktura obdelovanih podatkov)
 - vedenjski vidik (odziv na dogodke)
 
 ### Uporaba grafičnih načrtov
-- sredstvo za lažjo raspravo o obstoječem predlaganem sistemu
+- sredstvo za lažjo razpravo o obstoječem predlaganem sistemu
 - način za dokumentiranje obstoječega sistema
 prodroben opis sitema
 
