--- a/TPO/PZ3/p7.md
+++ b/TPO/PZ3/p7.md
@@ -12,7 +12,7 @@ Ožji kontekst -> posamezni program (razčlenitev na dele)
 - Dokumentiranje načrtovane arhitekture
 
 ## Odločitve pri zasnovi arhitekture
-- Ali obstaja splopna aplikacijska arhitektura
+- Ali obstaja splošna aplikacijska arhitektura
 - Kako bo sistem porazdeljen
 - Uporaba arhitekturnih vzorcev
 - Temeljni pristop strukturiranja sistema
@@ -25,7 +25,7 @@ Ožji kontekst -> posamezni program (razčlenitev na dele)
 - zmogljivost (lokalizacija kritičnih operacij)
 - varnost (večplastnost, lokaliziranje)
 - razpoložljivost (redudantnost)
-- vzdržljivost (zamenljivost)
+- vzdržljivost (zanesljivost)
 
 ## Pogledi na zasnovno arhitekturo
 Vsak model prilazuje samo en pogled na perspektivo sistema:
@@ -85,7 +85,7 @@ Funkcionalnosti obdelujejo svoje vhode, da vrnejo rezultat. Kadar imamo opravka 
 ### Uporaba
 - izhodišče za zasnovo arhitekture
 - kontrolni seznam pri načrtovanju
-- način prganiziranja dela razvojne skupine
+- način organiziranja dela razvojne skupine
 - sredstvo za ocenjevanje kopmonent za ponovno uporabo
 - slovar pri pogovoru o vrstah aplikacij
 
